# line_follower_turtlebot

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  package.xml
Maps/: lfm.world  lfm1.world
Maps/rooms/: model.config  model.sdf
Maps/yellow line/: model.config  model.sdf
Outputs/: cppcheck_output.txt
Results/: cpplint_output.txt
docs/: config
docs/html/: annotated.html  classLineDetect-members.html  classLineDetect.html  classes.html  classturtlebot-members.html  classturtlebot.html  detect_8cpp.html  detect_8cpp__incl.map  detect_8cpp__incl.md5  dir_000001_000000.html  dir_000002_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  linedetect_8cpp.html  linedetect_8cpp__incl.map  linedetect_8cpp__incl.md5  linedetect_8hpp.html  linedetect_8hpp__dep__incl.map  linedetect_8hpp__dep__incl.md5  linedetect_8hpp__incl.map  linedetect_8hpp__incl.md5  linedetect_8hpp_source.html  motion__node_8cpp.html  motion__node_8cpp__incl.map  motion__node_8cpp__incl.md5  test__detect_8cpp.html  test__detect_8cpp__incl.map  (+13 more)
docs/latex/: annotated.tex  classLineDetect.tex  classturtlebot.tex  detect_8cpp.tex  detect_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  linedetect_8cpp.tex  linedetect_8cpp__incl.md5  linedetect_8hpp.tex  linedetect_8hpp__dep__incl.md5  refman.tex  (+12 more)
include/: linedetect.hpp  turtlebot.hpp
launch/: lf.launch
msg/: pos.msg
src/: detect.cpp  linedetect.cpp  motion_node.cpp  turtlebot.cpp
test/: test_detect.cpp  test_detect.launch  test_navig.cpp  test_navig.launch
(+25 files in other folders)
